force-app/main/default/objects/WorkType/fields/Call_Role__c.field-meta.xml
<CustomField>
    <fullName>Call_Role__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Role</label>
    <type>Checkbox</type>
</CustomField>