force-app/main/default/objects/WorkType/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <label>Duration</label>
    <precision>7</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>