force-app/main/default/objects/WorkType/fields/Is_Duty__c.field-meta.xml
<CustomField>
    <fullName>Is_Duty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Duty</label>
    <type>Checkbox</type>
</CustomField>