force-app/main/default/objects/WorkType/fields/IsAL__c.field-meta.xml
<CustomField>
    <fullName>IsAL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAL</label>
    <type>Checkbox</type>
</CustomField>