force-app/main/default/objects/WorkType/fields/IsSkilled__c.field-meta.xml
<CustomField>
    <fullName>IsSkilled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSkilled</label>
    <type>Checkbox</type>
</CustomField>