force-app/main/default/objects/WorkType/fields/PPS_Visible__c.field-meta.xml
<CustomField>
    <fullName>PPS_Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PPS Visible</label>
    <type>Checkbox</type>
</CustomField>