force-app/main/default/objects/WorkType/fields/Type_Priority__c.field-meta.xml
<CustomField>
    <fullName>Type_Priority__c</fullName>
    <label>Type Priority</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>