force-app/main/default/objects/WorkType/fields/WFH_10_10__c.field-meta.xml
<CustomField>
    <fullName>WFH_10_10__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WFH 10/10</label>
    <type>Checkbox</type>
</CustomField>